Update about.html with education information

--- a/templates/about.html
+++ b/templates/about.html
@@ -52,9 +52,9 @@
             <div class="card-body">
                 <h5 class="card-title">Education</h5>
                 <p class="card-text">
-                    <!-- 이곳에 최종 학력 정보를 작성해주세요. -->
-                    [학교 이름], [전공]<br>
-                    [졸업 연도 또는 재학 중]
+                    경희사이버대학교<br>
+                    전자정보학과<br>
+                    1학년 백승민
                 </p>
             </div>
         </div>
